<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CurrentOrder">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@null"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_55dp" />

    <TextView
        android:id="@+id/reviewOrder"
        android:layout_width="378dp"
        android:layout_height="53dp"
        android:text="@string/reviewOrder"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewOrder"
        android:layout_alignParentStart="true"
        android:longClickable="false" />

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="53dp"
        android:text="@string/placeOrder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_below="@id/recyclerview"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_below="@id/recyclerview"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/totalPrice"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp" />

</RelativeLayout>