<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textview_Oname_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/emptyItem"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textview_Oquantity_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/emptyItem"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_Oprice_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/emptyNumber"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/removeItem"
        android:textAlignment="textEnd" />

</LinearLayout>