<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Menu"
    android:id="@+id/relativeLayoutMenu">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@null"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_55dp" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="234dp"
        android:layout_height="61dp"
        android:text="@string/menuTitle"
        android:textAlignment="textEnd"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/cart"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_alignEnd="@id/nestedScrollView"
        android:background="@null"
        android:contentDescription="@string/cart"
        app:srcCompat="@drawable/ic_shopping_cart_black_40dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu"
        android:layout_alignParentStart="true"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false" />

            <TextView
                android:id="@+id/menuPhotoCitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menuPhotoCredit"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>