<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/barista"
            android:layout_width="match_parent"
            android:layout_height="274dp"
            app:layout_constraintBottom_toTopOf="@+id/aboutUs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/barista"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="395dp"
            android:layout_height="54dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="139dp"
            android:text="@string/CompanyName"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/barista"
            app:layout_constraintEnd_toEndOf="@+id/barista"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="259dp"
            android:layout_height="42dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="14dp"
            android:text="@string/OurStoryTitle"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutUs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barista" />

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="359dp"
            android:layout_height="346dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="25dp"
            android:text="@string/AboutUs"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/barista"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@+id/barista" />

        <TextView
            android:id="@+id/photoCredit"
            android:layout_width="359dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="730dp"
            android:layout_marginEnd="25dp"
            android:text="@string/AboutUsPhotoCredit"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/aboutUs"
            app:layout_constraintStart_toStartOf="@id/aboutUs"
            app:layout_constraintTop_toBottomOf="@id/aboutUs" />


    </RelativeLayout>

</ScrollView>